Fix overflow issues and add media queries

--- a/src/themes/App.css
+++ b/src/themes/App.css
@@ -204,6 +204,14 @@ h2 {
   border: 1px solid black;
 }
 
+/* admin */
+
+#addProjectContainer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
 /* project cards */
 
 .all-projects {
@@ -252,6 +260,11 @@ h2 {
   font-weight: 500;
   font-size: 1.7rem;
   flex: 1;
+}
+
+.project-focus {
+  width: 100%;
+  overflow:scroll;
 }
 
 .ind-projects .project-focus p {
@@ -365,6 +378,11 @@ h2 {
     margin: 0px;
     margin-left: 0px;
     margin-top: 10px;
+  }
+
+  #addProjectContainer {
+    flex-direction: column;
+      align-items: center;
   }
 
 }
